# tilt_bed_controller

./: .gitignore  .projectlinkstore  AGENTS.md  CLAUDE.md  adc_currents.c  adc_currents.h  app.c  app.h  auto_level.c  auto_level.h  bed_actions.c  bed_actions.h  bed_control.c  bed_control.h  bed_settings.c  bed_settings.h  bed_status.c  bed_status.h  bed_types.h  debug_capture.h  dual_motor_control.c  dual_motor_control.h  exp_board.c  exp_board.h  exp_ui.c  exp_ui.h  mc3479.c  mc3479.h  motor_current_functions.c  motor_current_functions.h  nvm3_functions.c  nvm3_functions.h  pi4ioe5v6416.h  readme.md  settings_mode.c  settings_mode.h  sl_gatt_service_device_information_override.c  switch_input.c  switch_input.h  tilt_bed_controller.pintool  (+4 more)
autogen/: AGENTS-SLAB.md  gatt_db.c  gatt_db.h  gen.properties  linkerfile.ld  sl_bluetooth.c  sl_component_catalog.h  sl_dma_manager_instances.c  sl_dma_manager_instances.h  sl_event_handler.c  sl_i2cspm_init.c  sl_i2cspm_instances.h  sl_iostream_handles.c  sl_iostream_handles.h  sl_iostream_init_usart_instances.c  sl_iostream_init_usart_instances.h  sl_power_manager_handler.c  sl_pwm_init.c  sl_pwm_instances.h  sl_simple_button_instances.c  sl_simple_button_instances.h  sl_simple_led_instances.c  sl_simple_led_instances.h  sli_psa_config_autogen.h
cmake_gcc/: CMakeLists.txt  CMakePresets.json  autogen_toolchain.cmake  tilt_bed_controller.cmake  tilt_bed_controller_project.cmake  toolchain.cmake
config/: app_assert_config.h  nvm3_default_config.h  pin_config.h  psa_crypto_config.h  sl_bgapi_config.h  sl_bluetooth_advertiser_config.h  sl_bluetooth_common_config.h  sl_bluetooth_config.h  sl_bluetooth_connection_config.h  sl_btctrl_config.h  sl_btctrl_scheduler_priority_config.h  sl_clock_manager_oscillator_config.h  sl_clock_manager_tree_config.h  sl_core_config.h  sl_device_init_dcdc_config.h  sl_fem_util_config.h  sl_i2cspm_off_board_config.h  sl_i2cspm_on_board_config.h  sl_iostream_usart_io_stream_config.h  sl_mbedtls_config.h  sl_mbedtls_device_config.h  sl_memory_manager_config.h  sl_memory_manager_region_config.h  sl_power_manager_config.h  sl_pwm_init_motor1_config.h  sl_pwm_init_motor2_config.h  sl_pwm_init_motor3_config.h  sl_pwm_init_motor4_config.h  (+9 more)
(+20 files in other folders)
